// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the children after the tabs 1`] = `
<DocumentFragment>
  <div
    class="tabsContainer root"
  >
    <div
      data-testid="tabs-component"
    >
      <div
        data-testid="tabs-component-tab"
      >
        tabTitle1
      </div>
      <div
        data-testid="tabs-component-tab"
      >
        tabTitle2
      </div>
    </div>
  </div>
  <div
    class="view"
  >
    <h1>
      Child
    </h1>
  </div>
</DocumentFragment>
`;

exports[`Should render the children with the passed props 1`] = `
<DocumentFragment>
  <div
    class="tabsContainer root"
  >
    <div
      data-testid="tabs-component"
    >
      <div
        data-testid="tabs-component-tab"
      >
        tabTitle1
      </div>
    </div>
  </div>
  <div
    class="view"
  >
    <h2>
      Value
    </h2>
  </div>
</DocumentFragment>
`;

exports[`Should render the header between children and tabs 1`] = `
<DocumentFragment>
  <div
    class="tabsContainer root"
  >
    <div
      data-testid="tabs-component"
    >
      <div
        data-testid="tabs-component-tab"
      >
        tabTitle1
      </div>
    </div>
  </div>
  <div
    class="view"
  >
    <h1>
      Header
    </h1>
    <h2>
      Child
    </h2>
  </div>
</DocumentFragment>
`;
